# project

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml  multi_asset_example.yaml  user_btc_nvda_example.yaml
docs/: csv_schema.md  data_dictionary.md  first_run_testing_guide.md  methodology_map.md  output_catalog.md
examples/: run_pipeline.py
notebooks/: README.md
scripts/: inspect_outputs.py  review_detection.py
src/pattern_failures/: __init__.py  bar_builder.py  config.py  data_ingest.py  detectors_geometric.py  detectors_symbolic.py  experiments.py  features.py  market_calendars.py  outcomes.py  pipeline.py  reporting.py  schema.py  significance.py  surrogates.py  symbolic_transform.py  turning_points.py
src/patternfail/: __init__.py  cli.py  pipeline.py
src/patternfail/common/: config.py  io.py  paths.py  types.py
src/patternfail/context/: events.py  sessions.py  volatility_context.py
src/patternfail/data/: bars.py  ingest.py  market_hours.py  quality.py
src/patternfail/detectors/: base.py  channels.py  double_patterns.py  head_shoulders.py  symbolic_sax.py  triangles.py
src/patternfail/experiments/: existence.py  failure_context.py  method_compare.py  nesting.py  (+1 more)
tests/: test_cli_compat.py  test_config_windows_paths.py  test_detection_split_pivots.py  test_detector_debug_payloads.py  test_double_patterns_indexing.py  test_experiments_json_roundtrip.py  test_ingest_and_bars.py  test_market_hours.py  test_pattern_dedup.py  test_pipeline_import.py  test_review_detection.py  test_significance.py  test_turning_points_and_events.py
(+13 files in other folders)
