[project]
name = "patternfail"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "exchange-calendars>=4.5",
]

[project.scripts]
patternfail = "patternfail.cli:main"
name = "pattern-failures"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24", "scipy>=1.10"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["patternfail*"]
